<resources>
    <string name="app_name">lab3</string>
    <string name="order_label">OK</string>
    <string name="show_data">SHOW DATA</string>
    <string name="clear_data">CLEAR DATA</string>
    <string name="triangle">triangle</string>
    <string name="rectangle">rectangle</string>
    <string name="square">square</string>
    <string name="area">area</string>
    <string name="perimeter">perimeter</string>
    <string name="quest01">Choose parameters to calculate</string>
    <string name="quest02">Choose figure</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
